Fixed base function, added import from url, fix Mac/Linux importing + DnD